fix (users): email text-area out of bounds on resize (#1435)

--- a/web/sdk/admin/views/users/list/invite-users.module.css
+++ b/web/sdk/admin/views/users/list/invite-users.module.css
@@ -12,3 +12,9 @@
 .form-error-message {
   color: var(--rs-color-foreground-danger-primary);
 }
+
+.invite-users-emails-textarea {
+  resize: vertical;
+  width: 100%;
+  max-height: var(--rs-space-17);
+}
